--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "vite": "^5.0.3",
     "vitest": "^2.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "sveltekit-i18n": "^2.4.2"
+  }
 }
