--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-perfectionist": "^3.6.0",
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
+    "lucide-svelte": "^0.441.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
