--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write . && eslint . --fix",
     "test:integration": "playwright test",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "struct": "openapi-typescript -o src/lib/api/specification.ts"
   },
   "devDependencies": {
     "@playwright/test": "^1.28.1",
@@ -29,11 +30,14 @@
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
     "lucide-svelte": "^0.441.0",
+    "openapi-fetch": "^0.12.0",
+    "openapi-typescript": "^7.4.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^4.0.0",
+    "svelte-meta-tags": "^3.1.4",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
